# focal-loss-multiclass

./: .gitignore  LICENSE  README.md  pyproject.toml
focal_loss_multiclass/: __init__.py  focal_loss.py  utils.py
test/: test_focal_loss.py
